# p2p-git-project

./: .gitignore  CMakeLists.txt  CUSTOM_UI_IMPLEMENTATION.md  Merge Two Sorted Lists  NETWORK_OPTIMIZATION.md  README.md  auth_manager.cpp  auth_manager.h  custom_dialogs.cpp  custom_dialogs.h  dashboard_panel.cpp  dashboard_panel.h  git_backend.cpp  git_backend.h  identity_manager.cpp  identity_manager.h  info_dot.cpp  info_dot.h  main.cpp  mainwindow.cpp  mainwindow.h  network_manager.cpp  network_manager.h  network_panel.cpp  network_panel.h  notifications_panel.cpp  notifications_panel.h  project_window.cpp  project_window.h  repo_management_panel.cpp  repo_management_panel.h  repository_manager.cpp  repository_manager.h  welcome_window.cpp  welcome_window.h
res/: res.qrc  styles.qss
